# GeneHearing

./: .gitignore  config.yaml  pyproject.toml
notebooks/: data_info.ipynb
src/genehearing/analysis/: genehearing_relationnship.py
src/genehearing/preprocess/: excel_read_merge.py  preprocess_audiometry.py
src/genehearing/preprocess/objects/: genetic_audiometry_analyser.py  preprocessing_core.py  tonal_audiometry.py
